add get product by id
